feat(core): adiciona entidades Magia, Npc e atualiza Enums