@@ -1,14 +1,14 @@
 package com.luis.drakdex.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.luis.drakdex.dto.CriaturaDTO;
+import com.luis.drakdex.dto.CriaturaResponseDTO;
 import com.luis.drakdex.dto.ItemResponseDTO;
+import com.luis.drakdex.dto.MagiaResponseDTO;
+import com.luis.drakdex.dto.NpcResponseDTO;
 import com.luis.drakdex.dto.PastaRequestDTO;
 import com.luis.drakdex.dto.PastaResponseDTO;
 import com.luis.drakdex.model.Pasta;
@@ -16,51 +16,39 @@ import com.luis.drakdex.model.Usuario;
 import com.luis.drakdex.model.enums.CategoriaPasta;
 import com.luis.drakdex.repository.PastaRepository;
 
+import lombok.RequiredArgsConstructor;
+
 @Service
+@RequiredArgsConstructor
 public class PastaService {
 
-    @Autowired
-    private PastaRepository repository;
+    private final PastaRepository repository;
 
     @Transactional
     public PastaResponseDTO criarPasta(PastaRequestDTO dados, Usuario usuario) {
         Pasta novaPasta = new Pasta();
         novaPasta.setNome(dados.nome());
-        novaPasta.setUsuario(usuario);
         novaPasta.setPublica(dados.publica());
-        
-        // Se não vier categoria, assume que é Bestiário (CRIATURA) para compatibilidade
-        novaPasta.setCategoria(dados.categoria() != null ? dados.categoria() : CategoriaPasta.CRIATURA);
+        novaPasta.setCategoria(dados.categoria());
+        novaPasta.setUsuario(usuario);
 
-        // LÓGICA DE HIERARQUIA
         if (dados.pastaPaiId() != null) {
             Pasta pai = repository.findById(dados.pastaPaiId())
                     .orElseThrow(() -> new RuntimeException("Pasta pai não encontrada"));
-
-            // Validação de Propriedade
+            
             if (!pai.getUsuario().getId().equals(usuario.getId())) {
-                throw new RuntimeException("Você não pode criar subpastas no bestiário de outro caçador!");
+                throw new RuntimeException("Você não pode criar subpastas na pasta de outro usuário.");
             }
-
-            // Validação de Tipo: Não misturar itens com monstros
-            if (pai.getCategoria() != novaPasta.getCategoria()) {
-                throw new RuntimeException("Você não pode misturar tipos de pastas (Item vs Criatura)!");
+            if (pai.getCategoria() != dados.categoria()) {
+                throw new RuntimeException("A subpasta deve ser da mesma categoria da pasta pai.");
             }
-
-            // Validação de Profundidade (Max 3 níveis)
-            int nivel = 1;
+            
+            int nivel = 0;
             Pasta temp = pai;
             while (temp != null) {
                 nivel++;
                 temp = temp.getPastaPai();
-            }
-            if (nivel > 3) {
-                throw new RuntimeException("Limite de profundidade atingido! (Máximo: 3 níveis)");
-            }
-
-            // Herança de Privacidade
-            if (!pai.isPublica()) {
-                novaPasta.setPublica(false); 
+                if (nivel > 3) throw new RuntimeException("Limite de profundidade atingido!");
             }
 
             novaPasta.setPastaPai(pai);
@@ -70,20 +58,14 @@ public class PastaService {
         return converterParaDTO(novaPasta);
     }
 
-    // LISTAR MEUS (Filtrado por Categoria)
-    public List<PastaResponseDTO> listarMinhasPastasRaiz(Usuario usuario, CategoriaPasta categoria) {
-        return repository.findByUsuarioIdAndPastaPaiIsNullAndCategoria(usuario.getId(), categoria)
-                .stream()
-                .map(this::converterParaDTO)
-                .collect(Collectors.toList());
+    public List<PastaResponseDTO> listarMinhasPastas(Usuario usuario, CategoriaPasta tipo) {
+        List<Pasta> pastas = repository.findByUsuarioIdAndPastaPaiIsNullAndCategoria(usuario.getId(), tipo);
+        return pastas.stream().map(this::converterParaDTO).toList();
     }
 
-    // LISTAR PÚBLICAS (Filtrado por Categoria)
-    public List<PastaResponseDTO> listarPublicas(CategoriaPasta categoria) {
-        return repository.findByPublicaTrueAndPastaPaiIsNullAndCategoria(categoria)
-                .stream()
-                .map(this::converterParaDTO)
-                .collect(Collectors.toList());
+    public List<PastaResponseDTO> listarPublicas(CategoriaPasta tipo) {
+        List<Pasta> pastas = repository.findByPublicaTrueAndPastaPaiIsNullAndCategoria(tipo);
+        return pastas.stream().map(this::converterParaDTO).toList();
     }
 
     public PastaResponseDTO buscarPorId(Long id) {
@@ -92,64 +74,18 @@ public class PastaService {
         return converterParaDTO(pasta);
     }
 
-    // CONVERSOR RECURSIVO (Agora com Itens!)
-    private PastaResponseDTO converterParaDTO(Pasta pasta) {
-        List<PastaResponseDTO> filhosDTO = pasta.getSubPastas().stream()
-                .filter(filho -> !filho.getId().equals(pasta.getId())) // Evita loop visual
-                .map(this::converterParaDTO)
-                .collect(Collectors.toList());
-
-        // Converter Criaturas
-        List<CriaturaDTO> criaturasDTO = pasta.getCriaturas().stream()
-                .map(c -> {
-                     CriaturaDTO dto = new CriaturaDTO();
-                     dto.setId(c.getId());
-                     dto.setNome(c.getNome());
-                     dto.setTipo(c.getTipo());
-                     dto.setNivel(c.getNivel());
-                     dto.setDescricao(c.getDescricao());
-                     dto.setImagemUrl(c.getImagemUrl()); // Definir a URL da imagem
-                     if (c.getUsuario() != null) dto.setCriadorVulgo(c.getUsuario().getVulgo());
-                     return dto;
-                }).collect(Collectors.toList());
-
-        // Converter Itens (NOVO)
-        List<ItemResponseDTO> itensDTO = pasta.getItens().stream()
-                .map(i -> new ItemResponseDTO(
-                    i.getId(), i.getNome(), i.getDescricao(), i.getTipo(), i.getRaridade(),
-                    i.getPeso(), i.getPreco(), i.getDano(), i.getDefesa(), i.getPropriedades(),
-                    i.getUsuario().getVulgo(),i.getImagemUrl()
-                )).collect(Collectors.toList());
-
-        String donoVulgo = pasta.getUsuario() != null ? pasta.getUsuario().getVulgo() : "Desconhecido";
-
-        return new PastaResponseDTO(
-            pasta.getId(),
-            pasta.getNome(),
-            pasta.isPublica(),
-            pasta.getPastaPai() != null ? pasta.getPastaPai().getId() : null,
-            filhosDTO,
-            pasta.getCriaturas().size(),
-            criaturasDTO,
-            donoVulgo,
-            pasta.getCategoria(), // Devolve a categoria
-            itensDTO              // Devolve os itens
-        );
-    }
-
-    
-
     @Transactional
-    public PastaResponseDTO atualizar(Long id, String novoNome, Usuario usuario) {
+    public PastaResponseDTO atualizar(Long id, PastaRequestDTO dados, Usuario usuario) {
         Pasta pasta = repository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Pasta não encontrada"));
 
-        // Segurança: Só o dono pode renomear
         if (!pasta.getUsuario().getId().equals(usuario.getId())) {
-            throw new RuntimeException("Você não tem permissão para renomear esta pasta!");
+            throw new RuntimeException("Sem permissão para editar esta pasta.");
         }
 
-        pasta.setNome(novoNome);
+        pasta.setNome(dados.nome());
+        pasta.setPublica(dados.publica());
+        
         repository.save(pasta);
         return converterParaDTO(pasta);
     }
@@ -159,13 +95,71 @@ public class PastaService {
         Pasta pasta = repository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Pasta não encontrada"));
 
-        // Segurança: Só o dono pode apagar
         if (!pasta.getUsuario().getId().equals(usuario.getId())) {
-            throw new RuntimeException("Você não tem permissão para apagar esta pasta!");
+            throw new RuntimeException("Sem permissão para deletar esta pasta.");
         }
 
-        // O CascadeType.ALL na entidade Pasta vai apagar subpastas, itens e criaturas automaticamente
         repository.delete(pasta);
     }
-    
+
+    // --- CONVERSOR ENTIDADE -> DTO (CORRIGIDO) ---
+    private PastaResponseDTO converterParaDTO(Pasta pasta) {
+        
+        var criaturasDTO = pasta.getCriaturas().stream()
+            .map(c -> new CriaturaResponseDTO(
+                c.getId(), c.getNome(), c.getDescricao(), c.getNivel(), 
+                c.getTipo(), c.getImagemUrl(), c.getUsuario().getVulgo()
+            )).toList();
+
+        
+        var itensDTO = pasta.getItens().stream()
+            .map(i -> new ItemResponseDTO(
+                i.getId(), 
+                i.getNome(), 
+                i.getDescricao(), 
+                i.getTipo().name(),      
+                i.getRaridade().name(),  
+                i.getPeso(), 
+                i.getPreco(), 
+                i.getDano(), 
+                i.getDefesa(), 
+                i.getPropriedades(), 
+                i.getImagemUrl(), 
+                i.getUsuario().getVulgo()
+            )).toList();
+
+        var magiasDTO = pasta.getMagias().stream()
+            .map(m -> new MagiaResponseDTO(
+                m.getId(), m.getNome(), m.getEscola(), m.getTempoExecucao(),
+                m.getAlcance(), m.getDuracao(), m.getComponentes(),
+                m.getCusto(), m.getSistema(), m.getDescricao(),
+                m.getUsuario().getVulgo()
+            )).toList();
+
+        var npcsDTO = pasta.getNpcs().stream()
+            .map(n -> new NpcResponseDTO(
+                n.getId(), n.getNome(), n.getTipoFicha(), n.getAparencia(),
+                n.getPersonalidade(), n.getHistoria(), n.getNivelDesafio(),
+                n.getClasseArmadura(), n.getPontosVida(), n.getForca(),
+                n.getDestreza(), n.getConstituicao(), n.getInteligencia(),
+                n.getSabedoria(), n.getCarisma(), n.getRegrasCustomizadas(),
+                List.of(), // Listas vazias por enquanto
+                List.of(),
+                n.getUsuario().getVulgo()
+            )).toList();
+
+        return new PastaResponseDTO(
+                pasta.getId(),
+                pasta.getNome(),
+                pasta.isPublica(),
+                pasta.getPastaPai() != null ? pasta.getPastaPai().getId() : null,
+                pasta.getCategoria().name(),
+                pasta.getSubPastas().stream().map(this::converterParaDTO).toList(),
+                criaturasDTO,
+                itensDTO,
+                magiasDTO,
+                npcsDTO,
+                pasta.getUsuario().getVulgo()
+        );
+    }
 }
